kubernetes/monitoring/configs/base/prometheus/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    pod-security.kubernetes.io/enforce: privileged
    app.kubernetes.io/component: monitoring
    pod-security.kubernetes.io/warn-version: latest
  name: monitoring
